update: css & js templete

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/style.css"/>
     <title>Title</title>
 </head>
 <body>
 <h1>hello world</h1>
+<button type="button" onclick="alert('병신')">김상욱 다녀감</button>
 </body>
+<script src="./js/index.js"></script>
 </html>
