--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -139,19 +139,10 @@
 					<section class="box calendar">
 						<div class="inner">
 							<table id="calendarTable">
-
 								<thead>
-									<tr>
-										<th>
-											<label onclick="prevCalendar()"> ◀ </label>
-										</th>
-										<th colspan="5">
-											<label id="calendarTitle">February 2023</label>
-										</th>
-										<th>
-											<label onclick="nextCalendar()"> ▶ </label>
-										</th>
-									</tr>
+									<span onclick="prevCalendar()"> ◀ </span>
+									<caption id="calendarTitle">February 2023</caption>
+									<span onclick="nextCalendar()"> ▶ </span>
 									<tr>
 										<th scope="col" title="Sunday">S</th>
 										<th scope="col" title="Monday">M</th>
