change the days of the week to korean

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -152,13 +152,13 @@
 										</th>
 									</tr>
 									<tr>
-										<th scope="col" title="Sunday">S</th>
-										<th scope="col" title="Monday">M</th>
-										<th scope="col" title="Tuesday">T</th>
-										<th scope="col" title="Wednesday">W</th>
-										<th scope="col" title="Thursday">T</th>
-										<th scope="col" title="Friday">F</th>
-										<th scope="col" title="Saturday">S</th>
+										<th scope="col" title="Sunday">일</th>
+										<th scope="col" title="Monday">월</th>
+										<th scope="col" title="Tuesday">화</th>
+										<th scope="col" title="Wednesday">수</th>
+										<th scope="col" title="Thursday">목</th>
+										<th scope="col" title="Friday">금</th>
+										<th scope="col" title="Saturday">토</th>
 									</tr>
 								</thead>
 								<tbody>
