--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -142,13 +142,13 @@
 								<thead>
 									<tr>
 										<th>
-											<label onclick="prevCalendar()"> ◀ </label>
+											<label onclick="prevCalendar()" style="cursor:pointer"> ◀ </label>
 										</th>
 										<th colspan="5">
 											<label id="calendarTitle">현재 년도, 월</label>
 										</th>
 										<th>
-											<label onclick="nextCalendar()"> ▶ </label>
+											<label onclick="nextCalendar()" style="cursor:pointer"> ▶ </label>
 										</th>
 									</tr>
 									<tr>
