add the Go to greetings button

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -100,6 +100,13 @@
 						</form>
 					</section>
 
+				<!-- move to greetings -->
+					<section>
+						<form action="/greetings">
+							<button type="submit">greetings로 이동</button>
+						</form>
+					</section>
+
 				<!-- Text -->
 					<section class="box text-style1">
 						<div class="inner">
