modify list.html and add index_header and index_footer

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,57 +22,7 @@
 					<button type="button" id = change-color" onclick="changeBackgroundColor()">Dark Mode</button>
 				</div>
 				<div class="inner">
-
-					<!-- Post -->
-						<article class="box post post-excerpt">
-							<header>
-								<h2><a href="#">Template Page for WKM</a></h2>
-								<p>It's present for you</p>
-							</header>
-							<div class="info">
-								<span class="date"><span class="month">Feb<span>y</span></span> <span class="day">17</span><span class="year">, 2023</span></span>
-								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">32</a></li>
-									<li><a href="#" class="icon brands fa-twitter">64</a></li>
-									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
-								</ul>
-							</div>
-							<p>
-								<strong>SSibal!</strong> I wanna <a href="images/pic1.jpeg">Sex</a>
-							</p>
-						</article>
-
-					<!-- Post -->
-						<article class="box post post-excerpt">
-							<header>
-								<h2><a href="#">Ugly WKM</a></h2>
-								<p>And SW is Handsome</p>
-							</header>
-							<div class="info">
-								<span class="date"><span class="month">Feb<span>y</span></span> <span class="day">17</span><span class="year">, 2023</span></span>
-								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">32</a></li>
-									<li><a href="#" class="icon brands fa-twitter">64</a></li>
-									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
-								</ul>
-							</div>
-						</article>
-
-					<!-- Pagination -->
-						<div class="pagination">
-							<!--<a href="#" class="button previous">Previous Page</a>-->
-							<div class="pages">
-								<a href="#" class="active">1</a>
-								<a href="#">2</a>
-								<a href="#">3</a>
-								<a href="#">4</a>
-								<span>&hellip;</span>
-								<a href="#">20</a>
-							</div>
-							<a href="#" class="button next">Next Page</a>
-						</div>
+					<!-- 게시판 넣을 곳 -->
 
 				</div>
 			</div>
